--- a/styles/style.css
+++ b/styles/style.css
@@ -26,5 +26,32 @@ a.nav-link.sub {
 	margin-top: 10px;
 }
 .card {
-	background-color: lightgrey;
+	background-color: rgba(0,0,0,.5);
+}
+.panel-group .panel {
+	border-radius: 0;
+	box-shadow: none;
+	border-color: #EEEEEE;
+}
+.panel-default > .panel-heading {
+	padding: 0;
+	border-radius: 0;
+	color: #212121;
+	background-color: #FAFAFA;
+	border-color: #EEEEEE;
+}
+.panel-title {
+	font-size: 14px;
+}
+.panel-title > a {
+	display: block;
+	padding: 15px;
+	text-decoration: none;
+}
+.more-less {
+	float: right;
+	color: #212121;
+}
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+	border-top-color: #EEEEEE;
 }
